--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,22 @@
         android:id="@+id/characterListFragment"
         android:name="com.antoniogottsfritz.desafio_android.View.CharacterListFragment"
         android:label="fragment_character_list"
-        tools:layout="@layout/fragment_character_list" />
+        tools:layout="@layout/fragment_character_list" >
+        <action
+            android:id="@+id/action_charDetail"
+            app:destination="@+id/characterDetailFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/characterDetailFragment"
+        android:name="com.antoniogottsfritz.desafio_android.View.CharacterDetailFragment"
+        android:label="character_detail"
+        tools:layout="@layout/character_detail" >
+        <argument
+            android:name="character"
+            app:argType="com.antoniogottsfritz.desafio_android.Model.MarvelCharacter" />
+    </fragment>
 </navigation>
