Big list images

--- a/app/src/main/res/layout/character_detail.xml
+++ b/app/src/main/res/layout/character_detail.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
-        android:textAlignment="center"
+        android:gravity="center"
         android:textColor="@android:color/black"
         android:textSize="30dp"
         android:textStyle="bold"
@@ -33,7 +33,6 @@
         android:ellipsize="end"
         android:justificationMode="inter_word"
         android:maxLines="3"
-        android:textAlignment="textStart"
         android:textSize="20dp"
         tools:text="Spider Man" />
 
