Pagination, infinite scrolling, thumbnails

--- a/app/src/main/res/layout/character_row.xml
+++ b/app/src/main/res/layout/character_row.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:fontFamily="sans-serif-condensed"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="22dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
